--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,7 +1,6 @@
+# .streamlit/secrets.toml
 [mysql]
-host = "your_cloud_host"
-user = "your_cloud_user"
-password = "your_cloud_password"
-database = "your_cloud_database"
-
-STREAMLIT_ENV = "cloud"
+host = "your-cloud-db-host"
+user = "your-db-username"
+password = "your-db-password"
+database = "your-db-name"
